# IntelliLearn

./: .env  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  DockerFIle  Dockerfile  pyproject.toml  requirements.txt  server.py
backend/src/: client.py  config.json  speech_to_text.py  supabaseClient.py  tools.py
frontend/: DockerFile  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatMessage.jsx  Navbar.jsx  ProtectedRoute.jsx  QuizMessage.jsx  TypingIndicator.jsx
frontend/src/components/ui/: avatar.jsx  background-beams.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  orb.jsx  particles.jsx  sonner.jsx  tabs.jsx  toaster.jsx  tooltip.jsx
frontend/src/contexts/: UserContext.jsx
frontend/src/hooks/: use-audio-recording.jsx  use-toast.js  use-toast.jsx
frontend/src/libs/: db.js  supabase.js  utils.js
frontend/src/pages/: ChatPage.jsx  Dashboard.jsx  Index.jsx  LoginPage.jsx  NotesDashboard.jsx  SignUpPage.jsx
