[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.0",
    "google-genai>=1.20.0",
    "langchain-google-genai>=2.1.5",
    "mcp-use>=1.3.0",
    "pillow>=11.2.1",
    "fastapi>=0.115.13",
    "dotenv>=0.9.9",
    "transformers>=4.30.0",
    "optimum[openvino]>=1.15.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "supabase>=2.16.0",
]
